Finish Landing Page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </header>
         <div class="container1">
             <div class="hero-text">
-                <h2>This website is awesome</h2>
+                <div>This website is awesome</div>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="signup">Sign up</button>
             </div>
 
-            <img src="placeholder" alt="placeholder">
+            <div class="img">this is a placeholder for an image</div>
         </div>
         <div class="container2">
             <div class="section1">
@@ -63,15 +63,18 @@
             </div>
             <div class="section3">
                 <div class="card">
-                    <div class="call-to-action">
-                        Call to action! It's time!
+                    <div>
+                        <div class="call-to-action">
+                            Call to action! It's time!
+                        </div>
+                        <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    
                     <button class="signup">Sign up</button>
                 </div>
             </div>
         
         </div>
-        <footer>Copyright 2022</footer>
+        <footer>Copyright © The Odin Project 2021</footer>
     </body>
 </html>
